[package]
name = "gbln"
version = "0.9.0"
edition = "2021"
authors = ["Vivian Voss <ask+gbln@vvoss.dev>"]
description = "GBLN (Goblin Bounded Lean Notation) - Type-safe LLM-native data format"
repository = "https://github.com/gbln-org/gbln-rust"
homepage = "https://github.com/gbln-org/gbln"
license = "Apache-2.0"
keywords = ["parser", "serialization", "llm", "type-safe", "validation"]
categories = ["parser-implementations", "encoding"]
readme = "README.md"

[dependencies]
# XZ compression for I/O format - optional for WASM compatibility
xz2 = { version = "0.1", optional = true }

[dev-dependencies]

[features]
# Default features for native targets (includes compression)
default = ["compression"]

# XZ compression support (requires native C library)
# Disabled for WASM targets due to lzma-sys native dependencies
compression = ["xz2"]
